# maze

./: .clang-format  .env  .gitignore  CMakeLists.txt  Makefile  README.md  default.nix  index.html  package-lock.json  package.json
doc/: README.md
doc/classes/: cell.md  doc_classe_maze.md  doc_classe_show.md  doc_classe_stack.md  doc_classe_wall.md  doc_classe_writer.md  maze.md  queue.md  rand.md  reader.md  show.md  stack.md  wall.md  writer.md
doc/doc_classe/: doc_classe_cell.md  doc_classe_queue.md  doc_classe_rand.md  doc_classe_reader.md
src/: App.vue  Makefile  main  main.cpp  main_data.cpp  main_generator.cpp
src/assets/: main.css
src/instances/: maze.txt  maze1.txt  maze1_algo_cours.txt  maze1_writer.txt  maze3.txt  maze_notperfect1.txt  maze_notvalid1.txt
src/instances/tmp/: maze3_writer.txt
src/lib/: algo_1.cpp  algo_1.hpp  algo_cours.cpp  algo_cours.hpp  algo_diagonal.cpp  algo_diagonal.hpp  algo_fractal.cpp  algo_fractal.hpp  algo_perso.cpp  algo_perso.hpp  cell.cpp  cell.hpp  checker.cpp  checker.hpp  maze.cpp  maze.hpp  queue.cpp  queue.hpp  queue_file.cpp  queue_file.hpp  rand.cpp  rand.hpp  reader.cpp  reader.hpp  show.cpp  show.hpp  solver_1.cpp  solver_1.hpp  solver_width.cpp  solver_width.hpp  stack.cpp  stack.hpp  var.hpp  wall.cpp  wall.hpp  writer.cpp  writer.hpp
src/lib/algo/: algo_backtracking.cpp  algo_backtracking.hpp  algo_diagonal.cpp  algo_diagonal.hpp  algo_fractal.cpp  algo_fractal.hpp  algo_wallmaker.cpp  algo_wallmaker.hpp  back_tracking.cpp  back_tracking.hpp  diagonal.cpp  diagonal.hpp  fractal.cpp  fractal.hpp  wall_maker.cpp  wall_maker.hpp
src/lib/checker/: breadth_first.cpp  breadth_first.hpp  checker_breadthfirst.cpp  checker_breadthfirst.hpp  checker_depthfirst.cpp  checker_depthfirst.hpp  depth_first.cpp  depth_first.hpp
src/lib/game/: dead_end.cpp  dead_end.hpp  dead_end_hand.cpp  dead_end_hand.hpp  fog.cpp  fog.hpp  fog_hand.cpp  fog_hand.hpp  game_fog.cpp  game_fog.hpp  game_fog_hand.cpp  game_fog_hand.hpp  game_walk.cpp  game_walk.hpp  splatoon.cpp  splatoon.hpp  splatoon_dead_end.cpp  splatoon_dead_end.hpp  splatoon_dead_end_hand.cpp  splatoon_dead_end_hand.hpp  splatoon_hand.cpp  splatoon_hand.hpp  tom_thumb.cpp  tom_thumb.hpp  tom_thumb_hand.cpp  tom_thumb_hand.hpp  walk.cpp  walk.hpp
src/lib/game/lib/: limits.cpp  limits.hpp  splatoon.cpp  splatoon.hpp
src/lib/instances/: maze1.txt
src/lib/solver/: breadth_first.cpp  breadth_first.hpp  depth_first.cpp  depth_first.hpp  solver_breadthfirst.cpp  solver_breadthfirst.hpp  solver_depthfirst.cpp  solver_depthfirst.hpp
